# onthespot

./: setup.cfg
distros/arch/: PKGBUILD
distros/fedora/: onthespot.spec
distros/gentoo/media-sound/onthespot/: onthespot-1.1.4.ebuild
src/onthespot/: downloader.py  otsconfig.py  utils.py
src/onthespot/api/: bandcamp.py  soundcloud.py  tidal.py
